--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </section>
 
       <section class="places">
-        <div class="place places__margin">
+        <article class="place places__margin">
           <h2 class="place__title">Куршская коса</h2>
           <div class="place__website">
             <p class="place__url-heading">URL</p>
@@ -69,7 +69,7 @@
             <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
             <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
           </div>
-        </div>
+        </article>
         <div class="place places__margin">
           <h2 class="place__title">Кольский</h2>
           <div class="place__website">
